--- a/fastbreaktruck/pom.xml
+++ b/fastbreaktruck/pom.xml
@@ -51,6 +51,18 @@
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
+            <!-- Seccion configuration para generar un jar ejecutable de la app -->
+          <configuration>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <mainClass>edu.craptocraft.fastbreaktruck.App</mainClass>
+              </manifest>
+              <manifestEntries>
+                <url>${project.url}</url>
+              </manifestEntries>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
